2013-09-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* doc/cscope.1: "Find assignments to" search was missing from the
	man page.  Thanks to Roberto E. Vargas Caballero for noticing
	this.

2013-06-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* configure.in: Check for possible need of large file support.

	* config.h.in, configure, aclocal.m4, Makefile.in,
	contrib/Makefil.in, doc/Makefile.in, src/Makefile.in: Regenerated
	using autoconf 2.69.

2013-04-09  Neil Horman <nhorman@tuxdriver.com>

	* contrib/xcscope/xcscope.el: Add find assignments search to
	xcscope.el

2012-12-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/constants.h: Accept patch #2912267 to fix assumption about
	terminfo on OSX.

2012-11-20  Neil Horman  <nhorman@tuxdriver.com>

	Add option to delete cscope db's on exit

	* src/main.c: Added -X option to cmdline parser

	* doc/cscope.1: Updated man page to add new option above

2012-08-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Make an update release 15.8a

	* configure: Regenerated.

	* contrib/Makefile.in: Regenerated.

	* doc/Makefile.in: Regenerated.

	* Makefile.in: Regenerated.

	* doc/Makefile.am (EXTRA_DIST): xcscope.1 was missing from the
	distribution.

	* Makefile.am (EXTRA_DIST): Include INSTALL.gnu
	(dist-hook): Directories without Makefile.am in them cause
	unwanted CVS files to be included.  Remove them from the tarball.

	* contrib/Makefile.am (EXTRA_DIST): cctree was missing from the
	distribution.

	* configure.in: Update version to 15.8a

	* src/version.h (FIXVERSION): Update to 8a.

2012-08-02  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/version.h (FIXVERSION): Update missed.

	* src/fscanner.l: # with nothing after it would throw off the line
	count. (Bug #3553579)

2012-07-10 Neil Horman <nhorman@tuxdriver.com>

	* src/invlib.c: Corrected some sizing of amtused in invlib.c.
	sizeof(long) is dead reckoned to be 4 bytes, which is wrong on